--- a/index.html
+++ b/index.html
@@ -5,15 +5,96 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tetris Game</title>
 <style>
-body {margin: 0; font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background-color: #000; color: #fff;}
-canvas {border: 2px solid #fff; background-color: #222;}
-#game-container {display: flex; align-items: flex-start;}
-#controls {display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; margin-top: 10px; width: calc(300px + 140px);}
-#controls button, #restart {width: calc((300px + 140px) / 4 - 10px); height: calc((300px + 140px) / 4 - 10px); font-size: 24px; border: none; background-color: #333; color: #fff; border-radius: 8px; cursor: pointer;}
-#score {font-size: 20px; margin: 10px 0 20px;}
-#preview-container {margin-left: 20px; display: flex; flex-direction: column; align-items: center;}
-#game-over-message {margin: 20px 0; font-size: 24px; font-weight: bold; color: red; display: none;}
-#restart {margin-top: 10px; display: none; width: 120px;}
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #000;
+  color: #fff;
+}
+canvas {
+  border: 2px solid #fff;
+  background-color: #222;
+}
+#game-container {
+  order: 2;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row-reverse;
+}
+#controls {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin-top: 10px;
+  width: 440px; /* Matches the width of the game canvas */
+  justify-content: center;
+  order: 3;
+}
+#controls button, #restart {
+  font-size: 24px;
+  border: none;
+  background-color: #333;
+  color: #fff;
+  border-radius: 8px;
+  cursor: pointer;
+  aspect-ratio: 1 / 1;
+  width: 100%;
+}
+#score {
+  font-size: 20px;
+  margin: 10px 0 20px;
+}
+#preview-container {
+  align-items: center;
+  margin-bottom: 10px;
+  margin-left: 10px; 
+  width: calc((100% / 10) * 4); 
+}
+#game-over-message {
+  order: 0;
+  margin: 10px 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: red;
+  display: none;
+}
+
+@media (max-width: 600px) {
+  #game-container {
+    align-items: center;
+    flex-direction: column;
+  }
+  canvas {
+    width: 90%;
+    height: auto;
+  }
+  #preview-container {
+    display: flex;
+    flex-direction: column-reverse; /* Changes the order so the button is above the canvas */
+    align-items: center;
+    margin-bottom: 10px;
+    margin-left: 0;
+  }
+  #controls {
+    width: 90%;
+  }
+  #restart {
+    margin-bottom: 10px; /* Adds space between the button and the canvas */
+    height: 50px;
+  }
+}
+
+@media (max-height: 800px) {
+  #game-container {
+    transform: scale(calc(100vh / 800));
+    transform-origin: top;
+  }
+}
 </style>
 </head>
 <body>
@@ -21,18 +102,20 @@ canvas {border: 2px solid #fff; background-color: #222;}
 <div id="score">Score: 0 | Level: 1</div>
 <div id="game-over-message">Game Over</div>
 <div id="game-container">
-<canvas id="gameCanvas" width="300" height="600"></canvas>
-<div id="preview-container">
-<canvas id="previewCanvas" width="120" height="60"></canvas>
-<button id="restart">Restart</button>
-</div>
+    <div id="preview-container">
+      <canvas id="previewCanvas" width="120" height="60"></canvas>
+      <button id="restart">Restart</button>
+  </div>
+  <canvas id="gameCanvas" width="300" height="600"></canvas>
 </div>
 <div id="controls">
-<button id="left">←</button>
-<button id="down">↓</button>
-<button id="rotate">⤾</button>
-<button id="right">→</button>
+  <button id="left">←</button>
+  <button id="down">↓</button>
+  <button id="rotate">⤾</button>
+  <button id="right">→</button>
 </div>
+
+
 <script>
 const canvas = document.getElementById('gameCanvas');
 const previewCanvas = document.getElementById('previewCanvas');
@@ -87,6 +170,7 @@ function drawGrid() {
 }
 
 function drawShape(opacity = 1) {
+  if(shapeLocked) return;
   ctx.globalAlpha = opacity;
   ctx.fillStyle = currentShape.color;
   currentShape.shape.forEach((row, y) => {
@@ -108,7 +192,7 @@ function drawGhost() {
     currentShape.row++;
   }
   currentShape.row--;
-  drawShape(0.5); // Draw ghost shape with 50% opacity
+  drawShape(0.6);
   currentShape.row = originalRow;
 }
 
@@ -141,6 +225,7 @@ function spawnShape() {
 }
 
 function moveShape(dx, dy) {
+  if(shapeLocked) return;
   if (gameOver) return;
   currentShape.col += dx;
   currentShape.row += dy;
@@ -192,6 +277,11 @@ function clearLines() {
   for (let row = ROWS - 1; row >= 0; row--) {
     if (grid[row].every(cell => cell)) {
       createClearParticles(row);
+    }
+  }
+  for (let row = ROWS - 1; row >= 0; row--) {
+    if (grid[row].every(cell => cell)) {
+      createClearParticles(row);
       grid.splice(row, 1);
       grid.unshift(Array(COLS).fill(0));
       linesCleared++;
@@ -205,6 +295,7 @@ function clearLines() {
       dropInterval = Math.max(100, dropInterval - 100);
     }
   }
+  
 }
 
 function createClearParticles(row) {
@@ -217,7 +308,7 @@ function createClearParticles(row) {
         color: grid[row][col],
         opacity: 1,
         dx: (Math.random() - 0.5) * 6,
-        dy: (Math.random() - 0.5) * 6
+        dy: (Math.random() - 0.2) * 6
       });
     }
   }
@@ -227,6 +318,7 @@ function updateParticles() {
   particles.forEach((particle, index) => {
     particle.x += particle.dx;
     particle.y += particle.dy;
+    particle.opacity *= 0.97;
     particle.opacity -= 0.01;
     if (particle.opacity <= 0) {
       particles.splice(index, 1);
@@ -253,6 +345,40 @@ function updateScore() {
   scoreDisplay.textContent = `Score: ${score} | Level: ${level}`;
 }
 
+const keysPressed = {};
+const keyLastAction = {};
+const KEY_DELAYS = {
+    ArrowLeft: 100, // Delay in milliseconds for left movement
+    ArrowRight: 100, // Delay in milliseconds for right movement
+    ArrowDown: 50, // Delay in milliseconds for down movement
+    ArrowUp: 150, // Delay in milliseconds for rotation
+};
+
+document.addEventListener('keydown', (event) => {
+    keysPressed[event.key] = true;
+});
+
+document.addEventListener('keyup', (event) => {
+    keysPressed[event.key] = false;
+});
+
+function handleKeyPress(timestamp) {
+    Object.keys(keysPressed).forEach((key) => {
+        if (keysPressed[key]) {
+            // Check if the key has a delay defined and enough time has passed
+            if (!keyLastAction[key] || timestamp - keyLastAction[key] >= (KEY_DELAYS[key] || 0)) {
+                if (key === 'ArrowLeft') moveShape(-1, 0);
+                if (key === 'ArrowRight') moveShape(1, 0);
+                if (key === 'ArrowDown') moveShape(0, 1);
+                if (key === 'ArrowUp') rotateShape();
+
+                // Update the last action time for the key
+                keyLastAction[key] = timestamp;
+            }
+        }
+    });
+}
+
 function gameLoop(timestamp) {
   if (gameOver) return;
   if (!lastDropTime) lastDropTime = timestamp;
@@ -266,6 +392,7 @@ function gameLoop(timestamp) {
     moveShape(0, 1);
     lastDropTime = timestamp;
   }
+  handleKeyPress(timestamp); // Process active keys with delay
   drawGrid();
   drawGhost();
   drawShape();
@@ -275,16 +402,56 @@ function gameLoop(timestamp) {
 }
 
 restartButton.addEventListener('click', resetGame);
-document.getElementById('left').addEventListener('click', () => moveShape(-1, 0));
-document.getElementById('right').addEventListener('click', () => moveShape(1, 0));
-document.getElementById('down').addEventListener('click', () => moveShape(0, 1));
-document.getElementById('rotate').addEventListener('click', rotateShape);
 
-document.addEventListener('keydown', event => {
-  if (event.key === 'ArrowLeft') moveShape(-1, 0);
-  if (event.key === 'ArrowRight') moveShape(1, 0);
-  if (event.key === 'ArrowDown') moveShape(0, 1);
-  if (event.key === 'ArrowUp') rotateShape();
+// Handle button clicks
+function setupButtonListeners() {
+    const buttons = {
+        left: 'ArrowLeft',
+        right: 'ArrowRight',
+        down: 'ArrowDown',
+        rotate: 'ArrowUp',
+    };
+
+    Object.keys(buttons).forEach((buttonId) => {
+        const buttonKey = buttons[buttonId];
+        const buttonElement = document.getElementById(buttonId);
+
+        buttonElement.addEventListener('mousedown', () => {
+            keysPressed[buttonKey] = true;
+        });
+
+        buttonElement.addEventListener('mouseup', () => {
+            keysPressed[buttonKey] = false;
+        });
+
+        buttonElement.addEventListener('mouseleave', () => {
+            keysPressed[buttonKey] = false; // Stop action if mouse leaves the button
+        });
+
+        // Add touch event listeners
+        buttonElement.addEventListener('touchstart', () => {
+            keysPressed[buttonKey] = true;
+        });
+
+        buttonElement.addEventListener('touchend', () => {
+            keysPressed[buttonKey] = false;
+        });
+        buttonElement.addEventListener('touchcancel', () => {
+            keysPressed[buttonKey] = false; // Stop action if touch is canceled
+        });
+    });
+}
+
+// Call this once during initialization
+setupButtonListeners();
+
+
+document.addEventListener('keydown', (event) => {
+    keysPressed[event.key] = true;
+});
+
+document.addEventListener('keyup', (event) => {
+    keysPressed[event.key] = false;
 });
 
 resetGame();
