--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@ function gameLoop(timestamp) {
   drawGhost();
   drawShape();
   updateParticles();
+  drawSwipes();
   updateScore();
   requestAnimationFrame(gameLoop);
 }
@@ -476,46 +477,38 @@ document.addEventListener('keyup', (event) => {
 });
 
 
-const gameCanvass = document.getElementById('gameCanvas');
-const debugCanvas = document.createElement('canvas');
-debugCanvas.width = gameCanvass.width;
-debugCanvas.height = gameCanvass.height;
-debugCanvas.style.position = 'absolute';
-debugCanvas.style.top = gameCanvass.offsetTop + 'px';
-debugCanvas.style.left = gameCanvass.offsetLeft + 'px';
-debugCanvas.style.pointerEvents = 'none'; // Allow touches to pass through
-document.body.appendChild(debugCanvas);
+const swipes = []; // Array to store all swipe objects
 
-const debugCtx = debugCanvas.getContext('2d');
+// Function to draw all stored swipes on the canvas
+function drawSwipes() {
 
-function drawDebug(startX, startY, endX, endY, deltaX, deltaY) {
-    debugCtx.clearRect(0, 0, debugCanvas.width, debugCanvas.height); // Clear the previous visuals
+    swipes.forEach(swipe => {
+        // Draw swipe line
+        ctx.strokeStyle = 'red';
+        ctx.lineWidth = 2;
+        ctx.beginPath();
+        ctx.moveTo(swipe.startX, swipe.startY);
+        ctx.lineTo(swipe.endX, swipe.endY);
+        ctx.stroke();
 
-    // Draw swipe line
-    debugCtx.strokeStyle = 'red';
-    debugCtx.lineWidth = 2;
-    debugCtx.beginPath();
-    debugCtx.moveTo(startX, startY);
-    debugCtx.lineTo(endX, endY);
-    debugCtx.stroke();
+        // Draw text for swipe components
+        ctx.fillStyle = 'blue';
+        ctx.font = '16px Arial';
+        ctx.fillText(`ΔX: ${swipe.deltaX}`, swipe.endX + 10, swipe.endY - 10);
+        ctx.fillText(`ΔY: ${swipe.deltaY}`, swipe.endX + 10, swipe.endY + 10);
 
-    // Draw text for swipe components
-    debugCtx.fillStyle = 'blue';
-    debugCtx.font = '16px Arial';
-    debugCtx.fillText(`ΔX: ${deltaX}`, endX + 10, endY - 10);
-    debugCtx.fillText(`ΔY: ${deltaY}`, endX + 10, endY + 10);
+        // Draw start point
+        ctx.fillStyle = 'green';
+        ctx.beginPath();
+        ctx.arc(swipe.startX, swipe.startY, 5, 0, Math.PI * 2);
+        ctx.fill();
 
-    // Draw start point
-    debugCtx.fillStyle = 'green';
-    debugCtx.beginPath();
-    debugCtx.arc(startX, startY, 5, 0, Math.PI * 2);
-    debugCtx.fill();
-
-    // Draw end point
-    debugCtx.fillStyle = 'red';
-    debugCtx.beginPath();
-    debugCtx.arc(endX, endY, 5, 0, Math.PI * 2);
-    debugCtx.fill();
+        // Draw end point
+        ctx.fillStyle = 'red';
+        ctx.beginPath();
+        ctx.arc(swipe.endX, swipe.endY, 5, 0, Math.PI * 2);
+        ctx.fill();
+    });
 }
 
 let startX = 0;
@@ -532,6 +525,15 @@ gameCanvas.addEventListener('touchstart', (event) => {
     startY = touch.pageY;
     isSwipingHorizontal = false; // Reset swipe direction
     isSwipingVertical = false;
+
+    swipes.push({
+        startX,
+        startY,
+        endX: startX,
+        endY: startY,
+        deltaX: 0,
+        deltaY: 0
+    });
 });
 
 // Detect swipe move (real-time updates)
@@ -551,6 +553,13 @@ gameCanvas.addEventListener('touchmove', (event) => {
     // Calculate how many steps to move in the x or y direction
     const moveX = Math.floor(deltaX / sensitivity);
     const moveY = Math.floor(deltaY / sensitivity);
+
+        // Update the last swipe object in the array
+        const lastSwipe = swipes[swipes.length - 1];
+    lastSwipe.endX = endX;
+    lastSwipe.endY = endY;
+    lastSwipe.deltaX = deltaX;
+    lastSwipe.deltaY = deltaY;
 
     if (!isSwipingHorizontal && !isSwipingVertical) {
         // Determine the swipe direction on the first significant movement
